--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /* global part */
+*{
+    margin: 0px;
+}
 .container{
     width: 1200px;
     margin-left: auto;
@@ -28,11 +31,12 @@
 /* header part */
 nav{
     background-color: #2D25A0;
-}
+    padding: auto;
+} 
 #home{
     background-color: aquamarine;
-    padding: 10px 35px;
     margin-right: 10px;
+    padding: 10px 35px;
     border-radius: 5px;
 }
 #live{
